

add_compile_definitions(NO_FREETYPE)

add_library(external_library
    STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/defs.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/except.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/except.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/expr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/expreval.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/expr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/func.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/funclist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/funclist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/node.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/node.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/parser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/parser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/vallist.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/ExprEval/vallist.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/pngconf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/External/pngwriter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/External/pngwriter.h
    )

set( charm_interfaces
    Cello/main.CI
    Cello/main_enzo.CI
    Cello/main_mesh.CI
    Cello/main_simulation.CI
    Cello/mesh.CI
    Cello/simulation.ci
    Enzo/enzo.CI
    )

preprocess_charm_interfaces(charm_interface_headers ${charm_interfaces})


add_library(cello_library
    STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/array_CelloArray.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/array.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_array.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/array.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/cello.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/cello.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/cello_Sync.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/cello_Sync.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_FieldMsg.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MappingArray.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MappingArray.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MappingTree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MappingTree.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_mesh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_mesh.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgCoarsen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgCoarsen.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgRefine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgRefine.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgRefresh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_MsgRefresh.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_reductions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_reductions.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_simulation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/charm_simulation.hpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Cello/component_Classname.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Cello/component_Classname.hpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Cello/component.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_Compute.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_compute.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_Matrix.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_Matrix.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_Solver.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_Solver.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_SolverNull.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/compute_SolverNull.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_adapt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_charm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_compute.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_Control.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_control.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_initialize.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_new_refresh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_output.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_refresh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/control_stopping.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Data.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Data.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_DataMsg.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_DataMsg.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Face.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FaceFluxes.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FaceFluxes.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Face.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldDescr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldDescr.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldFace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FieldFace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Field.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FluxData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_FluxData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Grouping.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_data.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ItIndex.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ItIndexList.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ItIndexRange.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ParticleData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ParticleData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ParticleDescr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ParticleDescr.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Particle.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_png_array.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ScalarData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_ScalarDescr.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/data_Scalar.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/disk.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/disk_FileHdf5.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/disk_FileHdf5.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/disk_File.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_disk.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/disk.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/error.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/error_Error.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/error_Error.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_error.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/error.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/field_face_store.F
    #${CMAKE_CURRENT_SOURCE_DIR/Cello}/gtest_Colormap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Colormap.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ColormapRGB.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ColormapRGB.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_io.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Input.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_InputData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_InputData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Input.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoBlock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoBlock.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_io_Io_common.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Io.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoFieldData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoFieldData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoHierarchy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoHierarchy.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Io.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoParticleData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_IoParticleData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputCheckpoint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputCheckpoint.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Output.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputData.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Output.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputImage.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_OutputImage.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Schedule.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_Schedule.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ScheduleInterval.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ScheduleInterval.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ScheduleList.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/io_ScheduleList.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/lex.yy.c
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main_enzo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main_include.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main_mesh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/main_simulation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/memory.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_memory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/memory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/memory_Memory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/memory_Memory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Block.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Block.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Factory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Factory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_functions.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Hierarchy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Hierarchy.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_mesh.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Index.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Index.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItChild.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItFace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItFace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItNeighbor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItNeighbor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItNode.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_ItNode.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Node.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Node.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_NodeTrace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_NodeTrace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Refine.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineDensity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineDensity.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Refine.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineMask.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineMask.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineParticleCount.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineParticleCount.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineShear.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineShear.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineSlope.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_RefineSlope.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Tree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/mesh_Tree.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/method.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/monitor.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_monitor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/monitor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/monitor_Monitor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/monitor_Monitor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel.def
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessCharm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessCharm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcess.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcess.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessMpi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessMpi.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessSerial.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_GroupProcessSerial.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_parallel.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_ReduceCharm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_Reduce.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_ReduceMpi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_ReduceMpi.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parallel_ReduceSerial.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Config.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Config.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_parameters.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Param.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Parameters.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Parameters.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_Param.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parameters_ParamNode.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parse.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parse.l
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parse.tab.c
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parse.tab.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/parse.y
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_performance.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance_Papi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance_Papi.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance_Performance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance_Performance.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/performance_Timer.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Boundary.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_BoundaryPeriodic.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_BoundaryValue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_BoundaryValue.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_problem.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Initial.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialFile.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Initial.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialTrace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialTrace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialValue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_InitialValue.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Mask.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MaskExpr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MaskExpr.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Mask.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MaskPng.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MaskPng.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodCloseFiles.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodCloseFiles.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Method.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodDebug.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodDebug.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodFluxCorrect.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodFluxCorrect.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Method.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodNull.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodNull.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodTrace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_MethodTrace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Physics.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Problem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Problem.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Prolong.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Prolong.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ProlongInject.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ProlongInject.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ProlongLinear.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ProlongLinear.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Refresh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Refresh.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Restrict.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Restrict.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_RestrictLinear.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_RestrictLinear.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ScalarExpr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_ScalarExpr.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Stopping.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Stopping.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Units.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Value.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/problem_Value.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/simulation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/simulation.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_simulation.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/simulation.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/simulation_Simulation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/simulation_Simulation.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_CelloArray.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Classname.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_class_size.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Colormap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Data.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Error.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Face.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FaceFluxes.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Field.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FieldData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FieldDescr.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FieldFace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FileHdf5.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_FluxData.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Grouping.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/_test.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Index.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_ItChild.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_ItFace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_ItIndex.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_ItNode.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Mask.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Memory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Monitor.cpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Mpi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Node.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_NodeTrace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Papi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Parameters.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Parse.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Particle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Performance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_ProlongLinear.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Refresh.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Scalar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Schedule.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Sync.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Timer.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Tree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_TreeDensity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Type.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Unit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Unit.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Cello/test_Value.cpp
    ${charm_interface_headers}
    )

target_include_directories(cello_library
	PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_include_directories(cello_library
	PRIVATE
    ${CMAKE_SOURCE_DIR}/src/External
)
target_include_directories(cello_library
	PRIVATE
    ${CMAKE_SOURCE_DIR}/src/Cello
)
target_include_directories(cello_library
	PRIVATE
    ${CMAKE_SOURCE_DIR}/src/Enzo
)
add_dependencies(cello_library external_library)


add_executable(enzo_e_exe
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/calcdiss.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/calc_dt.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/calc_eigen.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/charm_enzo.hpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/cic_deposit.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/cic_interp.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/cicinterp.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_defines.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo.dir
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoBlock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoBlock.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoBoundary.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoBoundary.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoCenteredFieldRegistry.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoCenteredFieldRegistry.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeAcceleration.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeAcceleration.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeCicInterp.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeCicInterp.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeCoolingTime.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeCoolingTime.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputePressure.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputePressure.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeTemperature.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoComputeTemperature.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoConfig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoConfig.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoConstrainedTransport.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoConstrainedTransport.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoControl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoEOSIdeal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoEOSIdeal.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoEquationOfState.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoFactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoFactory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoFieldArrayFactory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoFieldArrayFactory.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialBCenter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialBCenter.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCloud.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCloud.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCollapse.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCollapse.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCosmology.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialCosmology.hpp
    #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialGrackleTest.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialGrackleTest.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialImplosion2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialImplosion2.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialInclinedWave.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialInclinedWave.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialMusic.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialMusic.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialPm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialPm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialPpmlTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialPpmlTest.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovArray2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovArray2.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovArray3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovArray3.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovRandom.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSedovRandom.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialShockTube.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialShockTube.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSoup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialSoup.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialTurbulence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoInitialTurbulence.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoIntegrableUpdate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoIntegrableUpdate.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixDiagonal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixDiagonal.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixIdentity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixIdentity.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixLaplace.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMatrixLaplace.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodCheckGravity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodCheckGravity.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodComovingExpansion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodComovingExpansion.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodCosmology.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodCosmology.hpp
   #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodGrackle.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodGrackle.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodGravity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodGravity.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodHeat.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodHeat.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodHydro.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodHydro.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodMHDVlct.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodMHDVlct.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPmDeposit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPmDeposit.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPmUpdate.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPmUpdate.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPpm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPpm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPpml.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodPpml.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodTurbulence.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoMethodTurbulence.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoPermutedCoordinates.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoPhysicsCosmology.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoPhysicsCosmology.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProblem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProblem.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlong.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlong.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlongMC1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlongMC1.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlongPoisson.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoProlongPoisson.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoReconstructor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoReconstructor.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoReconstructorNN.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoReconstructorNN.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoReconstructorPLM.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineMass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineMass.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineParticleMass.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineParticleMass.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineShock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRefineShock.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRestrict.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRestrict.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemann.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannHLLC.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannHLLD.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannHLL.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemann.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannImpl.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannLUT.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoRiemannUtils.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSimulation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSimulation.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverBiCgStab.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverBiCgStab.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverCg.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverCg.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverDd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverDd.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverDiagonal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverDiagonal.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverJacobi.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverJacobi.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverMg0.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSolverMg0.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSourceInternalEnergy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoSourceInternalEnergy.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoStopping.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoStopping.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_EnzoUnits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_finalize.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_fortran.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/_enzo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_IoEnzoBlock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_IoEnzoBlock.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo-p.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_reductions.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_SetMinimumSupport.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_SolveHydroEquations.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_SolveMHDEquations.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/enzo_typedefs.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/euler.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/expand_terms.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/flux_hll.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/flux_twoshock.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/fortran.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/fortran_types.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/grid_cic.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/interp1d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/interp2d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/interp3d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/interpolate.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/inteuler.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/int_lin3d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/intpos.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/intprim.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/intvar.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/ngpinterp.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/pgas2d_dual.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/pgas2d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/ppm_de.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_Conservative.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_HLLD.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_MAIN.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_monot.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_potokx.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_potoky.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_potokz.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_Primitive.F
   #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_QDD6.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_sub.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/PPML_TimeStep.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/print_slice.F
   #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/test_EnzoUnits.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/tscint1d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/tscint2d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/tscint3d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/turboinit2d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/turboinit.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/twoshock.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_calcdiss.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_calc_eigen.F
   #${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_cic_deposit.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_euler.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_flux_hllc.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_flux_hll.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_flux_twoshock.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_inteuler.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_intpos.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_intprim.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_intvar.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_pgas2d_dual.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_pgas2d.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/woc_twoshock.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/xeuler_sweep.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/yeuler_sweep.F
    ${CMAKE_CURRENT_SOURCE_DIR}/Enzo/zeuler_sweep.F
    ${charm_interface_headers}
    )
target_include_directories(enzo_e_exe
	PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_include_directories(enzo_e_exe
	PRIVATE
    ${CMAKE_SOURCE_DIR}/src/External
)

target_include_directories(enzo_e_exe
	PRIVATE
    ${CMAKE_SOURCE_DIR}/src/Cello
)
add_dependencies(enzo_e_exe cello_library)
add_dependencies(enzo_e_exe external_library)

target_link_libraries(enzo_e_exe cello_library)
target_link_libraries(enzo_e_exe external_library)

message(STATUS "Link to ${CHARM_LIBRARIES}")
target_link_libraries(enzo_e_exe ${CHARM_LIBRARIES})
target_link_libraries(enzo_e_exe ${ENZO_E_LIBRARIES})

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS}) 
    target_link_libraries(enzo_e_exe ${Boost_LIBRARIES})
endif()

